--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "dependencies": {
     "gulp-util": "~2.2.6",
-    "through": "~2.3.4",
+    "through2": "~0.4.0",
     "ngmin": "~0.4.0"
   },
   "devDependencies": {
